conversion/com.ibm.symphony.conversion.converter.ods.common/src/com/ibm/symphony/conversion/spreadsheet/impl/FormulaParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 D:\\Work\\antlr\\conversion\\Formula.g 2014-04-28 16:05:45


package com.ibm.symphony.conversion.spreadsheet.impl;
import java.util.ArrayList;
import com.ibm.symphony.conversion.spreadsheet.impl.ConversionUtil;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class FormulaParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "COLON", "CONCATENATION", "INTERSECT", "AND", "PLUS", "PLUSEQUAL", "MINUS", "MINUSEQUAL", "MULT", "MULTEEQUAL", "DIV", "DIVEQUAL", "P_OPEN", "P_CLOSE", "ARG_SEP", "ARG_SEP_WRONG", "EQUAL", "LESS", "LESSEQUAL", "GREATER", "GREATEREQUAL", "NOTEQUAL", "NOTEQUAL2", "AMPERSAND", "OR", "POW", "MODE", "MODEQUAL", "ARRAY_FORMULAR_START", "ARRAY_FORMULAR_END", "INT", "NAME", "NUMBER", "SINGLEQUOT_STRING", "WHITESPACE1", "DOUBLEQUOT_STRING", "NAME1", "ERRORNAME", "FUNC", "NONZERO_NUMBER", "DIGIT", "PERCENT", "LT", "COMMAOrSPACE", "KEYCHARACTER", "ODF_COLUMN", "ODF_COL_RANGE", "ODF_PREWORD", "ODF_PRELIST", "ODF_TABLE", "WHITESPACE", "SPACE", "'|'"
    };
    public static final int LT=46;
    public static final int ERRORNAME=41;
    public static final int SINGLEQUOT_STRING=37;
    public static final int NONZERO_NUMBER=43;
    public static final int KEYCHARACTER=48;
    public static final int ARG_SEP=18;
    public static final int GREATEREQUAL=24;
    public static final int ARRAY_FORMULAR_END=33;
    public static final int AND=7;
    public static final int SPACE=55;
    public static final int EOF=-1;
    public static final int DIVEQUAL=15;
    public static final int PLUSEQUAL=9;
    public static final int ARRAY_FORMULAR_START=32;
    public static final int NOTEQUAL=25;
    public static final int MINUSEQUAL=11;
    public static final int T__56=56;
    public static final int NAME=35;
    public static final int GREATER=23;
    public static final int POW=29;
    public static final int MODEQUAL=31;
    public static final int EQUAL=20;
    public static final int LESS=21;
    public static final int PLUS=8;
    public static final int COMMAOrSPACE=47;
    public static final int DIGIT=44;
    public static final int MODE=30;
    public static final int ARG_SEP_WRONG=19;
    public static final int PERCENT=45;
    public static final int WHITESPACE1=38;
    public static final int MULTEEQUAL=13;
    public static final int NUMBER=36;
    public static final int AMPERSAND=27;
    public static final int WHITESPACE=54;
    public static final int CONCATENATION=5;
    public static final int ODF_PREWORD=51;
    public static final int INT=34;
    public static final int ODF_TABLE=53;
    public static final int MULT=12;
    public static final int MINUS=10;
    public static final int P_OPEN=16;
    public static final int COLON=4;
    public static final int INTERSECT=6;
    public static final int ODF_PRELIST=52;
    public static final int P_CLOSE=17;
    public static final int DOUBLEQUOT_STRING=39;
    public static final int FUNC=42;
    public static final int OR=28;
    public static final int ODF_COLUMN=49;
    public static final int NOTEQUAL2=26;
    public static final int NAME1=40;
    public static final int DIV=14;
    public static final int LESSEQUAL=22;
    public static final int ODF_COL_RANGE=50;

    // delegates
    // delegators


        public FormulaParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public FormulaParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[64+1];
             
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return FormulaParser.tokenNames; }
    public String getGrammarFileName() { return "D:\\Work\\antlr\\conversion\\Formula.g"; }


    	List<ConversionUtil.Range> nameinstances = new ArrayList<ConversionUtil.Range>();
    	ArrayList<ConversionUtil.FormulaToken> tokenList = new ArrayList<ConversionUtil.FormulaToken>();
    	ArrayList<ConversionUtil.FormulaToken> tokenStack = new ArrayList<ConversionUtil.FormulaToken>();
    	Exception error = null; // for parse error.
    	public void reportError(RecognitionException e){
    		error = e;
      	// ignore report the error message
      	}


    public static class prog_return extends ParserRuleReturnScope {
        public String value;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "prog"
    // D:\\Work\\antlr\\conversion\\Formula.g:83:1: prog returns [String value] : ( EQUAL expr EOF | ARRAY_FORMULAR_START EQUAL expr ARRAY_FORMULAR_END EOF );
    public final FormulaParser.prog_return prog() throws RecognitionException {
        FormulaParser.prog_return retval = new FormulaParser.prog_return();
        retval.start = input.LT(1);
        int prog_StartIndex = input.index();
        CommonTree root_0 = null;

        Token EQUAL1=null;
        Token EOF3=null;
        Token ARRAY_FORMULAR_START4=null;
        Token EQUAL5=null;
        Token ARRAY_FORMULAR_END7=null;
        Token EOF8=null;
        FormulaParser.expr_return expr2 = null;

        FormulaParser.expr_return expr6 = null;


        CommonTree EQUAL1_tree=null;
        CommonTree EOF3_tree=null;
        CommonTree ARRAY_FORMULAR_START4_tree=null;
        CommonTree EQUAL5_tree=null;
        CommonTree ARRAY_FORMULAR_END7_tree=null;
        CommonTree EOF8_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // D:\\Work\\antlr\\conversion\\Formula.g:84:3: ( EQUAL expr EOF | ARRAY_FORMULAR_START EQUAL expr ARRAY_FORMULAR_END EOF )
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==EQUAL) ) {
                alt1=1;
            }
            else if ( (LA1_0==ARRAY_FORMULAR_START) ) {
                alt1=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }
            switch (alt1) {
                case 1 :
                    // D:\\Work\\antlr\\conversion\\Formula.g:84:5: EQUAL expr EOF
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    EQUAL1=(Token)match(input,EQUAL,FOLLOW_EQUAL_in_prog362); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    EQUAL1_tree = (CommonTree)adaptor.create(EQUAL1);
                    adaptor.addChild(root_0, EQUAL1_tree);
                    }
                    pushFollow(FOLLOW_expr_in_prog364);
                    expr2=expr();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, expr2.getTree());
                    if ( state.backtracking==0 ) {
                    }
                    EOF3=(Token)match(input,EOF,FOLLOW_EOF_in_prog368); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    EOF3_tree = (CommonTree)adaptor.create(EOF3);
                    adaptor.addChild(root_0, EOF3_tree);
                    }

                    }
                    break;
                case 2 :
                    // D:\\Work\\antlr\\conversion\\Formula.g:85:5: ARRAY_FORMULAR_START EQUAL expr ARRAY_FORMULAR_END EOF
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    ARRAY_FORMULAR_START4=(Token)match(input,ARRAY_FORMULAR_START,FOLLOW_ARRAY_FORMULAR_START_in_prog374); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    ARRAY_FORMULAR_START4_tree = (CommonTree)adaptor.create(ARRAY_FORMULAR_START4);
                    adaptor.addChild(root_0, ARRAY_FORMULAR_START4_tree);
                    }
                    EQUAL5=(Token)match(input,EQUAL,FOLLOW_EQUAL_in_prog376); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    EQUAL5_tree = (CommonTree)adaptor.create(EQUAL5);
                    adaptor.addChild(root_0, EQUAL5_tree);
                    }
                    if ( state.backtracking==0 ) {

                        		
                        	
                    }
                    pushFollow(FOLLOW_expr_in_prog388);
                    expr6=expr();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, expr6.getTree());
                    if ( state.backtracking==0 ) {
                    }
                    ARRAY_FORMULAR_END7=(Token)match(input,ARRAY_FORMULAR_END,FOLLOW_ARRAY_FORMULAR_END_in_prog392); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    ARRAY_FORMULAR_END7_tree = (CommonTree)adaptor.create(ARRAY_FORMULAR_END7);
                    adaptor.addChild(root_0, ARRAY_FORMULAR_END7_tree);
                    }
                    EOF8=(Token)match(input,EOF,FOLLOW_EOF_in_prog394); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    EOF8_tree = (CommonTree)adaptor.create(EOF8);
                    adaptor.addChild(root_0, EOF8_tree);
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, prog_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "prog"

    public static class expr_return extends ParserRuleReturnScope {
        public String value;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expr"
    // D:\\Work\\antlr\\conversion\\Formula.g:92:1: expr returns [String value] : a= atom ( MODE )* (m= ( LESS | GREATER | LESSEQUAL | GREATEREQUAL | MODEQUAL | MULTEEQUAL | MINUSEQUAL | PLUSEQUAL | DIVEQUAL | NOTEQUAL | NOTEQUAL2 | EQUAL | AND | MINUS | PLUS | MULT | DIV | POW | CONCATENATION | INTERSECT | COLON ) b= expr )* ;
    public final FormulaParser.expr_return expr() throws RecognitionException {
        FormulaParser.expr_return retval = new FormulaParser.expr_return();
        retval.start = input.LT(1);
        int expr_StartIndex = input.index();
        CommonTree root_0 = null;

        Token m=null;
        Token MODE9=null;
        FormulaParser.atom_return a = null;

        FormulaParser.expr_return b = null;


        CommonTree m_tree=null;
        CommonTree MODE9_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // D:\\Work\\antlr\\conversion\\Formula.g:93:5: (a= atom ( MODE )* (m= ( LESS | GREATER | LESSEQUAL | GREATEREQUAL | MODEQUAL | MULTEEQUAL | MINUSEQUAL | PLUSEQUAL | DIVEQUAL | NOTEQUAL | NOTEQUAL2 | EQUAL | AND | MINUS | PLUS | MULT | DIV | POW | CONCATENATION | INTERSECT | COLON ) b= expr )* )
            // D:\\Work\\antlr\\conversion\\Formula.g:93:9: a= atom ( MODE )* (m= ( LESS | GREATER | LESSEQUAL | GREATEREQUAL | MODEQUAL | MULTEEQUAL | MINUSEQUAL | PLUSEQUAL | DIVEQUAL | NOTEQUAL | NOTEQUAL2 | EQUAL | AND | MINUS | PLUS | MULT | DIV | POW | CONCATENATION | INTERSECT | COLON ) b= expr )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_atom_in_expr417);
            a=atom();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, a.getTree());
            if ( state.backtracking==0 ) {

              	    	
                  	
            }
            // D:\\Work\\antlr\\conversion\\Formula.g:96:6: ( MODE )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==MODE) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // D:\\Work\\antlr\\conversion\\Formula.g:96:7: MODE
            	    {
            	    MODE9=(Token)match(input,MODE,FOLLOW_MODE_in_expr427); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    MODE9_tree = (CommonTree)adaptor.create(MODE9);
            	    adaptor.addChild(root_0, MODE9_tree);
            	    }
            	    if ( state.backtracking==0 ) {
            	    }

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            // D:\\Work\\antlr\\conversion\\Formula.g:97:9: (m= ( LESS | GREATER | LESSEQUAL | GREATEREQUAL | MODEQUAL | MULTEEQUAL | MINUSEQUAL | PLUSEQUAL | DIVEQUAL | NOTEQUAL | NOTEQUAL2 | EQUAL | AND | MINUS | PLUS | MULT | DIV | POW | CONCATENATION | INTERSECT | COLON ) b= expr )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( ((LA3_0>=COLON && LA3_0<=DIVEQUAL)||(LA3_0>=EQUAL && LA3_0<=NOTEQUAL2)||LA3_0==POW||LA3_0==MODEQUAL) ) {
                    int LA3_2 = input.LA(2);

                    if ( (synpred23_Formula()) ) {
                        alt3=1;
                    }


                }


                switch (alt3) {
            	case 1 :
            	    // D:\\Work\\antlr\\conversion\\Formula.g:97:10: m= ( LESS | GREATER | LESSEQUAL | GREATEREQUAL | MODEQUAL | MULTEEQUAL | MINUSEQUAL | PLUSEQUAL | DIVEQUAL | NOTEQUAL | NOTEQUAL2 | EQUAL | AND | MINUS | PLUS | MULT | DIV | POW | CONCATENATION | INTERSECT | COLON ) b= expr
            	    {
            	    m=(Token)input.LT(1);
            	    if ( (input.LA(1)>=COLON && input.LA(1)<=DIVEQUAL)||(input.LA(1)>=EQUAL && input.LA(1)<=NOTEQUAL2)||input.LA(1)==POW||input.LA(1)==MODEQUAL ) {
            	        input.consume();
            	        if ( state.backtracking==0 ) adaptor.addChild(root_0, (CommonTree)adaptor.create(m));
            	        state.errorRecovery=false;state.failed=false;
            	    }
            	    else {
            	        if (state.backtracking>0) {state.failed=true; return retval;}
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }

            	    pushFollow(FOLLOW_expr_in_expr578);
            	    b=expr();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, b.getTree());
            	    if ( state.backtracking==0 ) {

            	      	    	if(m !=null && (m!=null?m.getText():null).equals(":")){
            	      				int size = tokenStack.size();
            	      				if(size>1){
            	      					ConversionUtil.FormulaToken right,left; 
            	      					right = tokenStack.remove(size-1);
            	      					left = tokenStack.remove(size-2);
            	      					ConversionUtil.FormulaToken token = ConversionUtil.generateVirtualToken(tokenList,left,right);
            	      					if(token != null)
            	      					 {
            	      						tokenList.add(token);
            	      						tokenStack.add(token);
            	      					 }	
            	      				}else{
            	      					tokenStack.clear();
            	      				}
            	      			}else if(m !=null && (m!=null?m.getText():null).equals("~")){
            	      				// need remove the top 2 refTokens in tokenStack and calculate the covered 1 refToken put into tokenStack.
            	      				int size = tokenStack.size();
            	      				if(size>1){
            	      					ConversionUtil.FormulaToken right,left;
            	      					right = tokenStack.remove(size-1);
            	      					left = tokenStack.remove(size-2);
            	      					ConversionUtil.FormulaToken token = ConversionUtil.generateVirtualToken(tokenList,left,right);
            	      					if(token != null)
            	      					 {
            	      					 	tokenList.add(token);
            	      						tokenStack.add(token);
            	      					 }	
            	      				}else{ 
            	      					tokenStack.clear();
            	      				}
            	      			}
            	              
            	    }

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, expr_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "expr"

    public static class atom_return extends ParserRuleReturnScope {
        public String value;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "atom"
